# DMarket-Telegram-Bot

./: .cursorrules  .dmypy.json  .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  =4.41.0  AGENTS.md  ANALYSIS_SUMMARY_RU.md  BM  BOOK_RECOMMENDATIONS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS_2026.md  CLEANUP_COMPLETED.txt  CLEANUP_REPORT.md  CLEANUP_VERIFICATION_20260102_162404.txt  COMMIT_GUIDE.md  CONTRIBUTING.md  COPILOT_SDK_ANALYSIS_EN.md  COPILOT_SDK_IMPLEMENTATION_GUIDE.md  COPILOT_SDK_INTEGRATION_ANALYSIS.md  COPILOT_SDK_INTEGRATION_INSTRUCTIONS.md  COPILOT_SDK_QUICKREF.md  COPILOT_SDK_README.md  COPILOT_SDK_VISUAL_SUMMARY.md  COVERAGE_ANALYSIS_SUMMARY.txt  CRITICAL_FIXES_NEEDED.md  DEVELOPMENT_ROADMAP.md  DIRECT_BUY_INTEGRATION_COMPLETE.md  Dockerfile  Dockerfile.dev  FINAL_TESTING_COMPLETE_REPORT.md  FINAL_TESTING_SUMMARY.md  FIXES_COMPLETED.txt  Final_Report.md  IMPROVEMENTS_ROADMAP.md  (+116 more)
.claude/: config.json
.config/: README.md  pyrightconfig.json
.cursor/: mcp.json  rules.md
.cursor/rules/: api-integration.mdc  python-source.mdc  telegram-handlers.mdc  testing.mdc  workflows.mdc
.devcontainer/: .gitattributes  Dockerfile  README.md  devcontainer.json  docker-compose.dev.yml  docker-compose.yml
.devcontainer/scripts/: onCreate.sh  postCreate.sh  postStart.sh
.github/: ACTIVATION_GUIDE.md  COPILOT_AGENT_GUIDE.md  COPILOT_IMPROVEMENTS_SUMMARY.md  COPILOT_SPACE_CONFIG.md  QUICK_ACTIVATION.md  SETUP_COMPLETE.md  activate-copilot.ps1  activate-copilot.sh  copilot-agent-instructions.md  copilot-custom-agents.yaml  copilot-instructions.md  copilot-workspace.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  copilot-task.md  feature_request.md  feature_request.yml  question.md
.github/actions/: README.md
.github/agents/: ProjectPlan.agent.md
.github/instructions/: api-integration.instructions.md  arbitrage.instructions.md  database.instructions.md  documentation.instructions.md  master.instructions.md  ml-ai.instructions.md  project-context.md  project-guidelines.md  python-best-practices.md  testing.instructions.md  (+3 more)
alembic/: AGENTS.md  ASYNC_MIGRATIONS.md  BEST_PRACTICES.md  README.md  env.py  script.py.mako
archive_old_docs/: CLEANUP_FINAL_REPORT.md  COMMIT_MESSAGE_REFACTORING.md  IMPROVEMENTS_SUMMARY_2026.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_7_IMPLEMENTATION_PLAN.md  PHASE_7_SUMMARY.md  POETRY_INTEGRATION_SUCCESS.md  POETRY_TESTING_GUIDE.md  README.md  RESTRUCTURING_PLAN.md  test_bot_commands.py  test_live_arbitrage.py
backup_keyboards_20260102_155333/: main.py  main_simplified.py
config/: AGENTS.md  auto_sell.yaml  config.yaml  cs2_waxpeer_filters.json  feature_flags.yaml  hooks.yaml  item_filters.yaml  mypy-fast.ini  prometheus.yml  pytest-fast.ini  rare_attributes.json
data/: bot_persistence.pickle
docs/: .env.direct_buy.example  ADVANCED_FILTERS_GUIDE.md  AI_BOT_CONTROL_PLAN.md  AI_TOOLS_CONFIG.md  AI_TOOLS_GUIDE.md  ANTHROPIC_INTEGRATION_ANALYSIS.md  ANYTOOL_INTEGRATION_GUIDE.md  ANYTOOL_N8N_INTEGRATION_GUIDE.md  API_COMPLETE_REFERENCE.md  API_COVERAGE_MATRIX.md  API_DOCUMENTATION.md  ARBITRAGE.md  ARBITRAGE_IMPROVEMENTS_2026.md  ARCHITECTURE.md  AUTOPILOT_GUIDE.md  AUTO_BUY_GUIDE.md  AUTO_SHUTDOWN_GUIDE.md  BOT_COMMANDS.md  BOT_IMPROVEMENTS.md  BOT_RESTART_GUIDE.md  BREADCRUMBS_GUIDE.md  CACHING_GUIDE.md  CACHING_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_GUIDE.md  CI_CD_GUIDE.md  CI_CD_QUICKSTART.md  CI_REFACTORING_SUMMARY.md  CLAUDE.md  CLICKHOUSE_INTEGRATION_ANALYSIS.md  CODE_QUALITY_REPORT.md  CONFIGURATION_FILES.md  CONTRACT_TESTING.md  CONTRIBUTING.md  COPILOT_GUIDE.md  COVERAGE_ANALYSIS.md  COVERAGE_IMPROVEMENT_PLAN.md  DAILY_REPORTS_GUIDE.md  DASHBOARD_GUIDE.md  DATABASE_MIGRATIONS.md  (+159 more)
docs-site/: README.md  mkdocs.yml  requirements.txt
docs-sphinx/: README.md  conf.py  index.rst  requirements.txt
educational_materials/: README.md
examples/: phase2_implementation_examples.py  steam_arbitrage_example.py
k8s/: deployment.yml  ingress.yml  secrets.example.yml
n8n/: README.md
nginx/: nginx.conf
scripts/: AGENTS.md  README.md  analyze_improvements.py  analyze_prices.py  backup_database.py  check_balance.py  check_code.py  check_cyrillic.py  check_dependencies.py  check_offers.py  cleanup_repository.ps1  clear_bot_updates.py  collect_ml_training_data.py  coverage_check.py  create_env_file.py  debug_fast.py  debug_suite.py  dmarket_api_example.py  encrypt_secrets.py  find_long_functions.py  fix_duplicate_test_classes.py  fix_sales_api_names.py  fix_sales_tests_v2.py  generate_changelog.py  generate_refactoring_todo.py  generate_skills_report.py  generate_test_template.py  get_chat_id.py  github_actions_monitor.py  health_check.py  init_db.py  init_db.sql  install_code_cli.ps1  install_vscode_extensions.ps1  migrate_refactored.ps1  migrate_users.py  monitor_performance.py  mutation_testing.py  performance_benchmark.py  pre_commit_check.ps1  (+24 more)
src/: __init__.py  __main__.py  containers.py  interfaces.py  main.py
tests/: README.md  __init__.py  conftest.py  conftest_di.py  conftest_vcr.py  test_alert_throttler.py  test_analytics.py  test_api_unified.py  test_arbitrage_scanner.py  test_arbitrage_scanner_updated.py  test_arbitrage_trader.py  test_arbitrage_unified.py  test_ascii_docstrings.py  test_auto_trader.py  test_bulkhead.py  test_callbacks.py  test_ci_smoke.py  test_competition.py  test_config.py  test_containers.py  test_crash_notif.py  test_crash_notifications.py  test_crash_notifications_simple.py  test_create_env_file.py  test_database.py  test_dead_letter_queue.py  test_dmarket_api.py  test_dmarket_api_circuit_breaker.py  test_dynamic_config.py  test_fallback_cache.py  test_interfaces.py  test_keyboards.py  test_liquidity_rules.py  test_logging_config.py  test_main.py  test_main_new.py  test_market_alerts_handler.py  test_market_analysis.py  test_market_analysis_handler.py  test_mkdocs_documentation.py  (+12 more)
(+1168 files in other folders)
